--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <h1><img src= "img/unpluggedlogo.png" alt= "Unplugged logo"/>Unplugged</h1>
+    <h2> Retreat from the desk, return refreshed.</h2>
+    <nav>
+      <ul>
+        <li>
+          <a href= "about/index.html" target= "_blank">About</a>
+        </li>
+        <li>
+          <a href= "faq/index.html" target= "_blank">FAQ</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
