--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <!-- Add your site or application content here -->
   <header>
+
     <h1><img src= "img/unpluggedlogo.png" alt= "Unplugged logo"/>Unplugged</h1>
-    <h2> Retreat from the desk, return refreshed.</h2>
     <nav>
       <ul>
         <li>
@@ -36,7 +36,16 @@
         </li>
       </ul>
     </nav>
+    <h2> Retreat from the desk, return refreshed.</h2>
+    <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
+
   </header>
+  <main>
+
+  </main>
+  <footer>
+    
+  </footer>
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
