--- a/index.html
+++ b/index.html
@@ -24,28 +24,91 @@
 
   <!-- Add your site or application content here -->
   <header>
+    <div class= "content-wrapper">
 
-    <h1><img src= "img/unpluggedlogo.png" alt= "Unplugged logo"/>Unplugged</h1>
-    <nav>
-      <ul>
-        <li>
-          <a href= "about/index.html" target= "_blank">About</a>
-        </li>
-        <li>
-          <a href= "faq/index.html" target= "_blank">FAQ</a>
-        </li>
-      </ul>
-    </nav>
-    <h2> Retreat from the desk, return refreshed.</h2>
-    <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
+      <a href= "#>"<img src= "img/unpluggedlogo.png" alt= "Unplugged logo"/></a>
+
+      <div class= "header-divider"></div>
+
+<!-- Navigation -->
+      <nav>
+        <ul>
+          <li>
+            <a href= "about/index.html" target= "_blank">About</a>
+          </li>
+          <li>
+            <a href= "faq/index.html" target= "_blank">FAQ</a>
+          </li>
+        </ul>
+      </nav>
+
+<!-- Hero image and Tagline -->
+      <h2> Retreat from the desk, return refreshed.</h2>
+      <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
+    </div>
 
   </header>
+
   <main>
 
+    <section>
+
+
+    </section>
+
+    </aside>
+
+    <aside>
+
+    <section>
+
+    </section>
+
   </main>
+
   <footer>
-    
+    <div class= "content-wrapper">
+
+      <div class= "footer-content">
+
+        <address class= "contact">
+          <p>
+            555-555-5555
+          </p>
+
+          <p>
+            hello@unplugged.com
+          </p>
+
+        </address>
+
+        <div class= "social">
+
+          <div class= "social-icons">
+
+            <p>
+              <a href= "https://www.facebook.com/lrjuni92" target= "_blank"></a>
+            </p>
+
+            <p>
+              <a href= "https://www.twitter.com/lrjuni92" target= "_blank"></a>
+            </p>
+
+            <p>
+              <a href= "https://www.instagram.com/lrjuni92" target= "_blank"></a>
+            </p>
+
+          </div> <!-- Social icons end -->
+
+        </div> <!-- Social end -->
+
+      </div> <!-- Footer content end -->
+
+    </div> <!-- Content wrapper end -->
+
+    <div class= "copyright">Copyright &copy;2020 | Unplugged</div>
   </footer>
+
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
