Fixed logo, moved hero, and added text to footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,7 @@
   <header>
     <div class= "content-wrapper">
 
-      <a href= "#>"<img src= "img/unpluggedlogo.png" alt= "Unplugged logo"/></a>
+      <a href= "#" target= "_blank"><img src= "img/unpluggedlogo.png" alt= "Unplugged logo" /></a>
 
       <div class= "header-divider"></div>
 
@@ -42,10 +42,7 @@
         </ul>
       </nav>
 
-<!-- Hero image and Tagline -->
-      <h2> Retreat from the desk, return refreshed.</h2>
-      <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
-    </div>
+    </div> <!-- Content wrapper end -->
 
   </header>
 
@@ -53,6 +50,9 @@
 
     <section>
 
+      <!-- Hero image and Tagline -->
+      <h2> Retreat from the desk, return refreshed.</h2>
+      <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
 
     </section>
 
@@ -72,6 +72,9 @@
       <div class= "footer-content">
 
         <address class= "contact">
+
+          <h3> Contact </h3>
+
           <p>
             555-555-5555
           </p>
@@ -83,7 +86,7 @@
         </address>
 
         <div class= "social">
-
+          <h3> Social </h3>
           <div class= "social-icons">
 
             <p>
