Created highlights section

--- a/index.html
+++ b/index.html
@@ -48,18 +48,83 @@
 
   <main>
 
+  <!-- Hero image and Tagline -->
     <section>
-
-      <!-- Hero image and Tagline -->
       <h2> Retreat from the desk, return refreshed.</h2>
       <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
 
     </section>
 
+  <!-- Newsletter Sign up -->
+    <aside>
+      <div>
+        <h3> Want to join the next retreat?</h3>
+        <p>
+          Find out when we're holding our next retreat and how your company or team can sign up!
+        </p>
+      </div>
+
+      <div>
+        <h3> Find out more </h3>
+        <p>
+          <input type= "text" name= "name" value= "email address" />
+          <input type= "button" value= "Download Itinerary" />
+        </p>
+      </div>
+
     </aside>
 
-    <aside>
+  <!-- Highlights of Retreat -->
+    <section>
+      <div>
+        <h3>Have the work week you always dreamed of--without the bad wifi.</h3>
+      </div>
 
+      <div>
+        <p>
+          <!-- Tent Icon --> <img />
+          Located in a peaceful bungalow outside Geneva, Wisconsin.
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <!-- Bed icon --> <img />
+          12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <!-- Fork/Knife icon --> <img />
+          Private chef team providing on demand meals- just like your team kitchen.
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <!-- Footprint icon --> <img />
+          5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <!-- Smiley icon --> <img />
+          Retreat facilator to manage your day to day activities so you all get a chance to reset.
+        </p>
+      </div>
+
+      <div>
+        <p>
+          <!-- Wifi icon --> <img />
+          Dedicated computer room for times that you must wifi.
+        </p>
+      </div>
+      
+    </section>
+
+  <!-- Previous Retreats -->
     <section>
 
     </section>
