--- a/index.html
+++ b/index.html
@@ -121,11 +121,25 @@
           Dedicated computer room for times that you must wifi.
         </p>
       </div>
-      
+
     </section>
 
   <!-- Previous Retreats -->
     <section>
+      <div>
+        <h3> Be a better team in 5 days, like this one.</h3>
+      </div>
+
+      <div>
+        <img /> <!-- Group photo -->
+      </div>
+
+      <div>
+        <h4> LaCrue Bottling Co. <br /> October 2018</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
 
     </section>
 
@@ -145,7 +159,7 @@
           </p>
 
           <p>
-            hello@unplugged.com
+            <a href= "mailto:hello@codeitlisa.com" target= "_blank"> hello@unplugged.com </a>
           </p>
 
         </address>
