--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 
   <!-- Add your site or application content here -->
   <header>
-    <div class= "content-wrapper">
+    <div class="content-wrapper">
 
-      <a href= "#" target= "_blank"><img src= "img/unpluggedlogo.png" alt= "Unplugged logo" /></a>
+      <a href="#" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
 
-      <div class= "header-divider"></div>
+      <div class="header-divider"></div>
 
 <!-- Navigation -->
       <nav>
         <ul>
           <li>
-            <a href= "faq/index.html" target= "_blank">FAQ</a>
+            <a href="faq/index.html" target="_blank">FAQ</a>
           </li>
           <li>
-            <a href= "about/index.html" target= "_blank">About</a>
+            <a href="about/index.html" target="_blank">About</a>
           </li>
         </ul>
       </nav>
@@ -49,135 +49,144 @@
   <main>
 
   <!-- Hero image and Tagline -->
-    <section>
+    <section class="hero-area">
       <h2> Retreat from the desk, return refreshed.</h2>
-      <img src= "img/jake-melara-30679-unsplash.jpg" alt= "Girl on Bridge in the woods by Jake Melara" />
+      <img src="img/jake-melara-30679-unsplash.jpg" alt="Girl on Bridge in the woods by Jake Melara" />
 
     </section>
 
   <!-- Newsletter Sign up -->
     <aside>
-      <div>
+      <div class="form-description">
         <h3> Want to join the next retreat?</h3>
         <p>
           Find out when we're holding our next retreat and how your company or team can sign up!
         </p>
       </div>
 
-      <div>
+      <div class="form">
         <h3> Find out more </h3>
         <p>
-          <input type= "text" name= "name" value= "email address" />
-          <input type= "button" value= "Download Itinerary" />
+          <input type="text" name="name" value="email address" />
+          <input type="button" value="Download Itinerary" />
         </p>
       </div>
 
     </aside>
 
   <!-- Highlights of Retreat -->
-    <section>
-      <div>
-        <h3>Have the work week you always dreamed of--without the bad wifi.</h3>
-      </div>
+    <section class="features">
+      <div class="content-wrapper">
+        <div>
+          <h3>Have the work week you always dreamed of--without the bad wifi.</h3>
+        </div>
 
-      <div>
-        <p>
-          <!-- Tent Icon --> <img />
-          Located in a peaceful bungalow outside Geneva, Wisconsin.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon">
+            <!-- Tent Icon --> <img />
+          </p>
+          <p class="feature-items-description">
+            Located in a peaceful bungalow outside Geneva, Wisconsin.
+          </p>
+        </article>
 
-      <div>
-        <p>
-          <!-- Bed icon --> <img />
-          12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon">
+            <!-- Bed icon --> <img />
+          </p>
+          <p class="feature-items-description">
+            12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+          </p>
+        </article>
 
-      <div>
-        <p>
-          <!-- Fork/Knife icon --> <img />
-          Private chef team providing on demand meals- just like your team kitchen.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon">
+            <!-- Fork/Knife icon --> <img />
+          </p>
+          <p class="feature-items-description">
+            Private chef team providing on demand meals- just like your team kitchen.
+          </p>
+        </article>
 
-      <div>
-        <p>
-          <!-- Footprint icon --> <img />
-          5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon">
+            <!-- Footprint icon --> <img />
+          </p>
+          <p class="feature-items-description">
+            5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.
+          </p>
+        </article>
 
-      <div>
-        <p>
-          <!-- Smiley icon --> <img />
-          Retreat facilator to manage your day to day activities so you all get a chance to reset.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon">
+            <!-- Smiley icon --> <img />
+          </p>
+          <p class="feature-items-description">
+            Retreat facilator to manage your day to day activities so you all get a chance to reset.
+          </p>
+        </article>
 
-      <div>
-        <p>
-          <!-- Wifi icon --> <img />
-          Dedicated computer room for times that you must wifi.
-        </p>
-      </div>
+        <article>
+          <p class="fontawesome-icon"><!-- Wifi icon --> <img /></p>
+          <p class="feature-items-description">
+            Dedicated computer room for times that you must wifi.
+          </p>
+        </article>
+
+      </div> <!-- Content wrapper end -->
 
     </section>
 
   <!-- Previous Retreats -->
-    <section>
-      <div>
-        <h3> Be a better team in 5 days, like this one.</h3>
-      </div>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <div>
+          <h3> Be a better team in 5 days, like this one.</h3>
+        </div>
 
-      <div>
-        <img /> <!-- Group photo -->
-      </div>
+        <div>
+          <img /> <!-- Group photo -->
+        </div>
 
-      <div>
-        <h4> LaCrue Bottling Co. <br /> October 2018</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
+        <article>
+          <h4> LaCrue Bottling Co. <br /> October 2018</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </article>
 
+      </div> <!-- Content wrapper end -->
     </section>
 
   </main>
 
   <footer>
-    <div class= "content-wrapper">
+    <div class="content-wrapper">
 
-      <div class= "footer-content">
+      <div class="footer-content">
 
-        <address class= "contact">
-
+        <address class="contact">
           <h3> Contact </h3>
-
           <p>
             555-555-5555
           <br />
-            <a href= "mailto:hello@codeitlisa.com" target= "_blank"> hello@unplugged.com </a>
+            <a href="mailto:hello@codeitlisa.com" target="_blank"> hello@unplugged.com </a>
           </p>
-
         </address>
 
-        <div class= "social">
+        <div class="social">
           <h3> Social </h3>
-          <div class= "social-icons">
 
+          <div class="social-icons">
             <p>
-              <a href= "https://www.facebook.com/lrjuni92" target= "_blank"></a>
+              <a href="https://www.facebook.com/lrjuni92" target="_blank"></a>
             </p>
-
             <p>
-              <a href= "https://www.twitter.com/lrjuni92" target= "_blank"></a>
+              <a href="https://www.twitter.com/lrjuni92" target="_blank"></a>
             </p>
-
             <p>
-              <a href= "https://www.instagram.com/lrjuni92" target= "_blank"></a>
+              <a href="https://www.instagram.com/lrjuni92" target="_blank"></a>
             </p>
-
           </div> <!-- Social icons end -->
 
         </div> <!-- Social end -->
@@ -186,7 +195,7 @@
 
     </div> <!-- Content wrapper end -->
 
-    <div class= "copyright">Copyright &copy;2020 | Unplugged</div>
+    <div class="copyright">Copyright &copy;2020 | Unplugged</div>
   </footer>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
