--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
       <div class="form">
         <h3> Find out more </h3>
-        <p>
+        <form>
           <input type="text" name="name" value="email address" />
           <input type="button" value="Download Itinerary" />
-        </p>
+        </form>
       </div>
 
     </aside>
