Added missing content wrapper

--- a/index.html
+++ b/index.html
@@ -57,19 +57,22 @@
 
   <!-- Newsletter Sign up -->
     <aside>
-      <div class="form-description">
-        <h3> Want to join the next retreat?</h3>
-        <p>
-          Find out when we're holding our next retreat and how your company or team can sign up!
-        </p>
-      </div>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3> Want to join the next retreat?</h3>
+          <p>
+            Find out when we're holding our next retreat and how your company or team can sign up!
+          </p>
+        </div>
 
-      <div class="form">
-        <h3> Find out more </h3>
-        <form>
-          <input type="text" name="name" value="email address" />
-          <input type="button" value="Download Itinerary" />
-        </form>
+        <div class="form">
+          <h3> Find out more </h3>
+          <form>
+            <input type="text" name="name" value="email address" />
+            <input type="button" value="Download Itinerary" />
+          </form>
+        </div>
+
       </div>
 
     </aside>
