--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,69 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+
+      <a href="#" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
+
+      <div class="header-divider"></div>
+
+<!-- Navigation -->
+      <nav>
+        <ul>
+          <li>
+            <a href="faq/index.html" target="_blank">FAQ</a>
+          </li>
+          <li>
+            <a href="about/index.html" target="_blank">About</a>
+          </li>
+        </ul>
+      </nav>
+
+    </div> <!-- Content wrapper end -->
+
+  </header>
+
+
+
+  <footer>
+    <div class="content-wrapper">
+
+      <div class="footer-content">
+
+        <address class="contact">
+          <h3> Contact </h3>
+          <p>
+            555-555-5555
+          <br />
+            <a href="mailto:hello@codeitlisa.com" target="_blank"> hello@unplugged.com </a>
+          </p>
+        </address>
+
+        <div class="social">
+          <h3> Social </h3>
+
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/lrjuni92" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com/lrjuni92" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/lrjuni92" target="_blank"></a>
+            </p>
+          </div> <!-- Social icons end -->
+
+        </div> <!-- Social end -->
+
+      </div> <!-- Footer content end -->
+
+    </div> <!-- Content wrapper end -->
+
+    <div class="copyright">Copyright &copy;2020 | Unplugged</div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
