--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
 
-      <a href="#" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
+      <a href="../index.html" target="_blank"><img src="../img/unpluggedlogo.png" alt="Unplugged logo" /></a>
 
       <div class="header-divider"></div>
 
@@ -37,7 +37,7 @@
             <a href="faq/index.html" target="_blank">FAQ</a>
           </li>
           <li>
-            <a href="about/index.html" target="_blank">About</a>
+            <a href="#" target="_blank">About</a>
           </li>
         </ul>
       </nav>
