--- a/faq/index.html
+++ b/faq/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
 
-      <a href="#" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
+      <a href="../index.html" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
 
       <div class="header-divider"></div>
 
@@ -34,7 +34,7 @@
       <nav>
         <ul>
           <li>
-            <a href="faq/index.html" target="_blank">FAQ</a>
+            <a href="#" target="_blank">FAQ</a>
           </li>
           <li>
             <a href="about/index.html" target="_blank">About</a>
