Coded main about content struture

--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
       <nav>
         <ul>
           <li>
-            <a href="faq/index.html" target="_blank">FAQ</a>
+            <a href="../faq/index.html" target="_blank">FAQ</a>
           </li>
           <li>
             <a href="#" target="_blank">About</a>
@@ -46,7 +46,47 @@
 
   </header>
 
+  <main>
 
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h3>Our Mission - we want to make you the team you always wanted to be</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ut aliquam purus sit amet. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Dapibus ultrices in iaculis nunc sed augue. Accumsan lacus vel facilisis volutpat est velit egestas dui. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Faucibus interdum posuere lorem ipsum dolor. Nulla at volutpat diam ut venenatis tellus in metus. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Pellentesque elit eget gravida cum sociis natoque. Eu mi bibendum neque egestas congue quisque egestas. Ac auctor augue mauris augue neque. Dignissim convallis aenean et tortor at. Lectus magna fringilla urna porttitor rhoncus dolor purus non. Suspendisse faucibus interdum posuere lorem ipsum dolor sit. Scelerisque purus semper eget duis at. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae proin.
+          </p>
+          <p>
+            Vestibulum sed arcu non odio euismod lacinia at quis risus. Mi bibendum neque egestas congue. Nunc sed blandit libero volutpat sed cras ornare. Nulla facilisi cras fermentum odio. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Nibh praesent tristique magna sit amet purus gravida quis. Eget aliquet nibh praesent tristique. Scelerisque purus semper eget duis at tellus at urna condimentum. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices. Pharetra massa massa ultricies mi quis hendrerit. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Fermentum leo vel orci porta non pulvinar. Ultricies tristique nulla aliquet enim tortor at. Nibh tortor id aliquet lectus proin nibh nisl condimentum. Egestas quis ipsum suspendisse ultrices gravida dictum. Vestibulum lorem sed risus ultricies tristique nulla. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Est pellentesque elit ullamcorper dignissim.
+          </p>
+        </div> <!-- Mission content end -->
+      </div> <!-- Content wrapper end -->
+    </section>
+
+    <figure class="map">
+
+    </figure>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h3>Contact us, because you all need this.</h3>
+        <address>
+          <div>
+            <h4> General Information </h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147 <br /> 555-555-5555 <br /> <a href="mailto:hello@codeitlisa.com">hello@unplugged.com</a>
+            </p>
+          </div>
+
+          <div>
+            <h4> Chat with a Facilitator </h4>
+            <p>
+              555-555-5556 <br /> <a href="mailto:hello@codeitlisa.com">facilitator@unplugged.com</a>
+            </p>
+          </div>
+        </address>
+      </div> <!-- Content wrapper end -->
+    </section>
+  </main>
 
   <footer>
     <div class="content-wrapper">
