Added titles and content for FAQ pg

--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged | Frequently Asked Questions</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
 
-      <a href="../index.html" target="_blank"><img src="img/unpluggedlogo.png" alt="Unplugged logo" /></a>
+      <a href="../index.html" target="_blank"><img src="../img/unpluggedlogo.png" alt="Unplugged logo" /></a>
 
       <div class="header-divider"></div>
 
@@ -46,7 +46,38 @@
 
   </header>
 
+  <main>
+    <section class="faq-section">
+      <div class="content-wrapper">
+        <div class="faq-content">
+          <h3> Frequently Asked Questions</h3>
+          <div>
+            <h4> How do I get to the Unplugged Retreat? </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit. Quam vulputate dignissim suspendisse in est ante in. Commodo nulla facilisi nullam vehicula ipsum a arcu. Sit amet massa vitae tortor. Magna eget est lorem ipsum dolor sit. Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Convallis posuere morbi leo urna.
+            </p>
 
+            <h4> What size teams can you accomodate? </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus.
+            </p>
+          </div>
+
+          <div>
+            <h4> What kind of team is right for the Unplugged Retreat? </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit.
+            </p>
+
+            <h4> Is there no wifi available? </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus.
+            </p>
+          </div>
+        </div> <!-- FAQ content end -->
+      </div> <!-- Content wrapper end -->
+    </section>
+  </main>
 
   <footer>
     <div class="content-wrapper">
