Modify faq content hierachy

--- a/faq/index.html
+++ b/faq/index.html
@@ -49,32 +49,35 @@
   <main>
     <section class="faq-section">
       <div class="content-wrapper">
+        <h2> Frequently Asked Questions</h2>
         <div class="faq-content">
-          <h3> Frequently Asked Questions</h3>
-          <div>
-            <h4> How do I get to the Unplugged Retreat? </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit. Quam vulputate dignissim suspendisse in est ante in. Commodo nulla facilisi nullam vehicula ipsum a arcu. Sit amet massa vitae tortor. Magna eget est lorem ipsum dolor sit. Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Convallis posuere morbi leo urna.
-            </p>
+          <h3> How do I get to the Unplugged Retreat? </h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit. Quam vulputate dignissim suspendisse in est ante in. Commodo nulla facilisi nullam vehicula ipsum a arcu. Sit amet massa vitae tortor. Magna eget est lorem ipsum dolor sit. Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Convallis posuere morbi leo urna.
+          </p>
+        </div>
 
-            <h4> What size teams can you accomodate? </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus.
-            </p>
-          </div>
+        <div class="faq-content">
+          <h3> What size teams can you accomodate? </h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus.
+          </p>
+        </div>
 
-          <div>
-            <h4> What kind of team is right for the Unplugged Retreat? </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit.
-            </p>
+        <div class="faq-content">
+          <h3> What kind of team is right for the Unplugged Retreat? </h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus. Sed id semper risus in hendrerit.
+          </p>
+        </div>
 
-            <h4> Is there no wifi available? </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus.
-            </p>
-          </div>
-        </div> <!-- FAQ content end -->
+        <div class="faq-content">
+          <h3> Is there no wifi available? </h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Morbi tristique senectus et netus. Dictum at tempor commodo ullamcorper a lacus.
+          </p>
+        </div>
+
       </div> <!-- Content wrapper end -->
     </section>
   </main>
