--- a/faq/index.html
+++ b/faq/index.html
@@ -37,7 +37,7 @@
             <a href="#" target="_blank">FAQ</a>
           </li>
           <li>
-            <a href="about/index.html" target="_blank">About</a>
+            <a href="../about/index.html" target="_blank">About</a>
           </li>
         </ul>
       </nav>
