--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
         </ul>
       </nav>
 
+
+      <!-- Hero image and Tagline -->
+        <figure class="hero-area">
+          <h2> Retreat from the desk, return refreshed.</h2>
+          <img src="img/jake-melara-30679-unsplash.jpg" alt="Girl on Bridge in the woods by Jake Melara" />
+
+        </figure>
+
     </div> <!-- Content wrapper end -->
 
   </header>
 
   <main>
-
-  <!-- Hero image and Tagline -->
-    <section class="hero-area">
-      <h2> Retreat from the desk, return refreshed.</h2>
-      <img src="img/jake-melara-30679-unsplash.jpg" alt="Girl on Bridge in the woods by Jake Melara" />
-
-    </section>
 
   <!-- Newsletter Sign up -->
     <aside>
@@ -73,7 +74,7 @@
           </form>
         </div>
 
-      </div>
+      </div> <!-- Aside content wrapper end -->
 
     </aside>
 
@@ -136,29 +137,29 @@
           </p>
         </article>
 
-      </div> <!-- Content wrapper end -->
+      </div> <!-- Features Content wrapper end -->
 
     </section>
 
   <!-- Previous Retreats -->
     <section class="reviews">
       <div class="content-wrapper">
-        <div>
+        <div class="review-header">
           <h3> Be a better team in 5 days, like this one.</h3>
         </div>
 
-        <div>
+        <div class="review-photo">
           <img /> <!-- Group photo -->
         </div>
 
-        <article>
+        <article class="review-content">
           <h4> LaCrue Bottling Co. <br /> October 2018</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </article>
 
-      </div> <!-- Content wrapper end -->
+      </div> <!-- Reviews Content wrapper end -->
     </section>
 
   </main>
