Added comments to about pg

--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
             Vestibulum sed arcu non odio euismod lacinia at quis risus. Mi bibendum neque egestas congue. Nunc sed blandit libero volutpat sed cras ornare. Nulla facilisi cras fermentum odio. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Nibh praesent tristique magna sit amet purus gravida quis. Eget aliquet nibh praesent tristique. Scelerisque purus semper eget duis at tellus at urna condimentum. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices. Pharetra massa massa ultricies mi quis hendrerit. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Fermentum leo vel orci porta non pulvinar. Ultricies tristique nulla aliquet enim tortor at. Nibh tortor id aliquet lectus proin nibh nisl condimentum. Egestas quis ipsum suspendisse ultrices gravida dictum. Vestibulum lorem sed risus ultricies tristique nulla. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Est pellentesque elit ullamcorper dignissim.
           </p>
         </div> <!-- Mission content end -->
-      </div> <!-- Content wrapper end -->
+      </div> <!-- Mission Content wrapper end -->
     </section>
 
     <figure class="map">
@@ -84,7 +84,7 @@
             </p>
           </div>
         </address>
-      </div> <!-- Content wrapper end -->
+      </div> <!-- Contact Content wrapper end -->
     </section>
   </main>
 
